Changed controllers function to asymc/await
